# nats-firehose-ingest

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
charts/: create-secrets.sh
charts/nats-firehose-ingest/: Chart.yaml  values.yaml
charts/nats-firehose-ingest/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
src/: __init__.py  config.py  cursor_store.py  filters.py  firehose.py  firehose_client.py  health.py  logging_setup.py  metrics.py  nats_client.py  service.py  types.py
